<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/line_shape"
    android:paddingHorizontal="20dp">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:tint="@color/green"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_wifi_protected_setup_24"
        android:layout_marginVertical="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorAccentDemo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/must_update"
        android:gravity="center"
        android:textColor="@color/colorAccentDemo"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textAllCaps="true"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:text="@string/update_now"
        android:fontFamily="@font/poppins_bold"/>

</LinearLayout>