<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00373737">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/line_shape"
        android:backgroundTint="@color/white_smoke">
        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_signal_wifi_off_24"
            android:contentDescription="@string/app_name"
            app:tint="@color/red_smoke" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorAccentDemo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/no_internet"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:textColor="@color/colorAccentDemo"
            android:layout_margin="18dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/white"
            android:text="@string/retry"
            android:fontFamily="@font/poppins_bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tryConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00000000"
            android:textColor="@color/colorAccentDemo"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="italic"
            android:text="@string/connect_now_i"
            android:layout_margin="10dp"/>
    </LinearLayout>


</LinearLayout>