<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@color/white_smoke">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <com.google.android.material.card.MaterialCardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:cardElevation="14dp"
                   app:cardCornerRadius="10dp"
                   android:layout_alignParentStart="true">
                   <ImageView
                       android:id="@+id/logo_Image"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:contentDescription="@string/app_name"
                       android:src="@drawable/logo_a"
                       android:transitionName="logo_image" />
               </com.google.android.material.card.MaterialCardView>


               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/skip_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="SKIP Login"
                   android:textColor="@color/background"
                   android:textSize="15sp"
                   android:textStyle="bold"
                   android:background="@drawable/line_shape"
                   android:backgroundTint="@color/item_color_inactive"
                   android:paddingHorizontal="15dp"
                   android:layout_alignParentEnd="true"
                   />
           </RelativeLayout>



            <TextView
                android:id="@+id/logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/hello_there"
                android:textColor="@color/green"
                android:textSize="35sp"
                android:textStyle="bold"
                android:transitionName="logo_text" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:transitionName="slogan_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/grey"
                    app:boxStrokeColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/sexy_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_manage_accounts_24"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins_bold"
                        android:includeFontPadding="false"
                        android:inputType="textVisiblePassword"
                        android:text="@string/mahin"
                        android:textColor="@color/green"
                        android:transitionName="username_tran" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="@string/password"
                    android:includeFontPadding="false"
                    android:textColorHint="@color/grey"
                    android:transitionName="password_tran"
                    app:boxStrokeColor="@color/black"
                    app:counterTextColor="@color/sexy_blue"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/sexy_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_security_24"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins_bold"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:text="@string/app_name"
                        android:textColor="@color/green" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:checked="true"
                        android:text="@string/remember_me"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/forgotPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="#00000000"
                        android:elevation="0dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:transitionName="forgot_tran" />
                </RelativeLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:transitionName="button_tran"
                    android:background="@drawable/line_shape"
                    android:backgroundTint="@color/green"
                    android:layout_gravity="center"
                    android:paddingHorizontal="80dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/line_shape"
                    android:backgroundTint="@color/green"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textAlignment="center"
                    android:includeFontPadding="false"
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                   android:fontFamily="@font/poppins_bold" />

                <Button
                    android:id="@+id/callSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:text="@string/new_user_sign_up"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:transitionName="login_signup_tran" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="180dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/un"
                    android:textSize="25sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/green"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/u1"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/grey"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a1"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"/>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_autoPlay="false"
        android:visibility="invisible"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/mahin_timer"
       android:layout_centerInParent="true"
       />
</RelativeLayout>
